fix title padding and align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,11 @@ h1 {
  margin-bottom: 20;
 }
 
+.uk-container {
+ margin-left: 0;
+ margin-right: 0;
+}
+
 .uk-navbar-container {
   margin-left: 25px;
   margin-right: 25px;
